new header token

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
             allowCredentials: true
             allowedHeaders:
               - content-type
+              - token
             allowedMethods:
               - GET
               - POST
