--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,9 @@ ext {
 }
 
 dependencies {
+	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt NEW**
+	implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 	implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
